<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EpiAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="connection_login">Login</string>
    <string name="connection_password">Password</string>
    <string name="connection_button">Login</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="loging_you_in">Logging you in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--navdrawer strings-->
    <string name="navdrawer_login">login</string>
    <string name="navdrawer_email">email</string>
    <string name="marks">Marks</string>
    <string name="navdrawer_planning">Planning</string>
    <string name="navdrawer_modules">Modules</string>
    <string name="dashboard">Dashboard</string>


    <string name="planning_today">Today</string>
    <string name="calendar">Planning</string>
    <string name="logout">Logout</string>
    <string name="validate_token">Validate token</string>

    <string name="yes">yes</string>
    <string name="no">non</string>

    <!-- Months -->
    <string name="january">january</string>
    <string name="february">february</string>
    <string name="march">march</string>
    <string name="april">april</string>
    <string name="may">may</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">august</string>
    <string name="september">september</string>
    <string name="october">october</string>
    <string name="november">november</string>
    <string name="december">december</string>
    <string name="home">Home</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <!--Text test-->
    <string name="lorem_ipsum">lorem ipsum doler si amet</string>
    <string name="promo">Promo</string>
    <string name="semester">Semester</string>
    <string name="logtime">NetSoul</string>
    <string name="current_credit">Credits :</string>

    <string name="object_credit">Objectif :</string>
    <string name="try_again">try again</string>

    <string name="enter_token">Enter your token</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="loading_data">Loading data ...</string>
    <string name="error_fetching_data">Impossible de récuperer les données</string>
    <string name="login_error">Can\'t log you in</string>
    <string name="token_error">You can\'t enter your token for this session or your token is invalid</string>
    <string name="token_success">Token validated</string>
    <string name="no_event">No event</string>

    <string name="history">History</string>
    <string name="comment">Comment :</string>
    <string name="dismiss">Exit</string>
    <string name="subscribed_since">Subscribed since </string>
    <string name="messages">Last messages</string>
    <string name="rater">Rater :</string>
    <string name="really_logout">Do you really want to log out ?</string>
    <string name="search_mark">Search a mark</string>
    <string name="dialog_ocr_title">OCR working</string>
    <string name="dialog_ocr_message">please wait ...</string>
    <string name="module_acquired">Acquired</string>
    <string name="module_fail">Failed</string>

</resources>
