<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/project_mark"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="@dimen/project_mark"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <include layout="@layout/navdrawer_separator"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/detail_module"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/project_name"/>

        <include layout="@layout/navdrawer_separator"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_marginBottom="5dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/scrollview">

            <TextView
                android:id="@+id/comment_text_view"
                android:textSize="16sp"
                android:lineSpacingMultiplier="1.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </ScrollView>

        <include layout="@layout/navdrawer_separator"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_detail_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/detail_mark_button"
                android:textSize="14sp"
                android:text="@string/dismiss"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toLeftOf="@+id/button_detail_mark"
                android:layout_toStartOf="@+id/button_detail_mark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rater"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearLayout2">

                    <ImageView
                        android:layout_width="@dimen/history_card_image_size"
                        android:layout_height="@dimen/history_card_image_size"
                        android:src="@drawable/person_image_empty"
                        android:visibility="visible"
                        android:id="@+id/rater_image"
                        android:layout_marginRight="10dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/mark_rater"
                            android:gravity="center_vertical"
                            android:text="@string/lorem_ipsum"
                            android:singleLine="true"/>

                        <TextView
                            android:layout_width="253dp"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/mark_date"
                            android:gravity="center_vertical"
                            android:text="@string/lorem_ipsum"
                            android:singleLine="true"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>