<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:weightSum="2">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/epitech_logo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"/>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginField"
                android:inputType="textNoSuggestions"
                android:hint="@string/connection_login"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/passwordField"
                android:layout_alignStart="@+id/passwordField"
                android:layout_alignRight="@+id/passwordField"
                android:layout_alignEnd="@+id/passwordField" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordField"
                android:hint="@string/connection_password"
                android:layout_below="@+id/loginField"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_button"
                android:id="@+id/loginButton"
                android:layout_below="@+id/passwordField"
                android:layout_alignLeft="@+id/passwordField"
                android:layout_alignStart="@+id/passwordField"
                android:layout_alignRight="@+id/passwordField"
                android:layout_alignEnd="@+id/passwordField"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_below="@+id/loginButton">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_spinner_loading"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progressBar1"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/text_view_spinner_loading"
                        android:layout_below="@+id/progressBar1"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_spinner_error_login"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/icon_error"
                        android:id="@+id/imageView2"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="44dp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/text_view_spinner_error"
                        android:text="@string/login_error"
                        android:layout_below="@+id/imageView2"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
