<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/header_dashboard"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/epitech_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_view_dashboard_height"
        android:scaleType="centerCrop"
        android:src="@drawable/epitech_bordeaux_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignBottom="@+id/epitech_image">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75">

            <ImageView
                android:layout_width="@dimen/header_userimage_size"
                android:layout_height="@dimen/header_userimage_size"
                android:id="@+id/header_imageview_dashboard"
                android:src="@drawable/person_image_empty"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lorem_ipsum"
                    android:singleLine="true"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/title_user"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:gravity="center_horizontal"
                    android:id="@+id/email_user"/>

            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.25">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/promo"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_marginRight="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="2017"
                        android:id="@+id/student_year"
                        android:textColor="@color/abc_primary_text_material_dark"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/semester"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_marginRight="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="5"
                        android:id="@+id/student_semester"
                        android:textColor="@color/abc_primary_text_material_dark"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/current_credit"
                            android:id="@+id/textView2"
                            android:layout_marginRight="5dp"
                            android:textColor="@color/abc_primary_text_material_dark"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold"
                            android:text="120"
                            android:id="@+id/current_credit"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/textView2"
                            android:layout_toEndOf="@+id/textView2"
                            android:textColor="@color/abc_primary_text_material_dark"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/object_credit"
                            android:layout_marginRight="5dp"
                            android:textColor="@color/abc_primary_text_material_dark"
                            android:id="@+id/textView4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold"
                            android:text="120"
                            android:id="@+id/objectif_credit"
                            android:textColor="@color/abc_primary_text_material_dark"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/textView4"
                            android:layout_toEndOf="@+id/textView4" />
                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/logtime"
                            android:layout_marginRight="5dp"
                            android:textColor="@color/abc_primary_text_material_dark" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold"
                            android:text="7.3"
                            android:id="@+id/current_netsoul"
                            android:textColor="@color/abc_primary_text_material_dark" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
